examples/test/testpolicy19387.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19387
  namespace: namespace33
spec:
  podSelector:
    matchLabels:
      key28: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value43
          key5: value7
          key41: value24
      podSelector:
        matchLabels:
          key46: value21
